Fixed the nowrap issue via inline-block

--- a/charsheet.css
+++ b/charsheet.css
@@ -114,6 +114,7 @@ td {
 
 .nobreak {
   	white-space: nowrap;
+	display: inline-block;
 }
 
 h3 {
